<resources>
    <string name="app_name">DemoA</string>
    <string name="title">智慧城市</string>
    <!--  按钮及弹窗布局的文本  -->
    <string name="guide_page_title">网络设置</string>
    <string name="guide_page_option1">服务器IP地址:</string>
    <string name="guide_page_option1_hint">请输入服务器IP地址</string>
    <string name="guide_page_option2">端口:</string>
    <string name="guide_page_option2_hint">请输入端口号</string>
    <string name="guide_page_btn_save">保存修改</string>
    <!--  主页布局下的按钮文本  -->
    <string-array name="bottom_home">
        <item>个人中心</item>
        <item>新闻</item>
        <item>首页</item>
        <item>智慧党建</item>
        <item>全部服务</item>
    </string-array>
    <string name="seach_hint">新闻搜索</string>
    <string name="subway_hint">获取定位中……</string>
    <!--  底线  -->
    <string name="endstr">--------------------我是有底线的--------------------</string>
    <!--  应用服务的文本  -->
    <string-array name="littie_app">
        <item>地铁查询</item>
        <item>地铁2</item>
        <item>地铁3</item>
        <item>地铁4</item>
        <item>地铁5</item>
        <item>地铁6</item>
        <item>地铁7</item>
        <item>地铁8</item>
        <item>地铁9</item>
        <item>更多服务</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sub_beijing">
        <item>地铁一号线</item>
        <item>地铁二号线</item>
        <item>地铁四号线</item>
        <item>地铁五号线</item>
        <item>地铁六号线</item>
        <item>地铁七号线</item>
        <item>地铁八号线</item>
        <item>地铁九号线</item>
        <item>地铁十号线</item>
        <item>地铁十三号线</item>
        <item>地铁十四号线</item>
        <item>地铁十五号线</item>
        <item>地铁十六号线</item>
        <item>地铁房山线</item>
        <item>地铁昌平线</item>
        <item>地铁亦庄线</item>
        <item>地铁燕房线</item>
        <item>西郊线</item>
        <item>S1线</item>
        <item>首都机场线</item>
        <item>大兴机场线</item>
    </string-array>
    <string-array name="newsType">
        <item>最新</item>
        <item>热门</item>
        <item>世界</item>
        <item>娱乐</item>
        <item>军事</item>
        <item>财经</item>
        <item>体育</item>
        <item>汽车</item>
        <item>教育</item>
        <item>科技</item>
    </string-array>
</resources>