<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/webicon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        android:src="@mipmap/web"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_page_title"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="@id/webicon"
        app:layout_constraintLeft_toRightOf="@id/webicon"/>
    <TextView
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_page_option1"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/webicon"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/Ipconfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="请输入服务器IP地址"
        android:ems="9"
        app:layout_constraintLeft_toRightOf="@id/option1"
        app:layout_constraintTop_toTopOf="@id/option1"/>
    <TextView
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/option1"
        app:layout_constraintRight_toRightOf="@id/option1"
        android:text="@string/guide_page_option2"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="请输入端口号"
        android:ems="9"
        app:layout_constraintTop_toBottomOf="@+id/Ipconfig"
        app:layout_constraintLeft_toLeftOf="@id/Ipconfig"/>
</androidx.constraintlayout.widget.ConstraintLayout>