<?xml version="1.0" encoding="utf-8"?>
<!-- 弹窗的布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/webicon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/web"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_page_title"
            android:textSize="36sp"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_page_option1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="bottom"/>
        <EditText
            android:id="@+id/ip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="bottom"/>
        <EditText
            android:id="@+id/ip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="bottom"/>
        <EditText
            android:id="@+id/ip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center|right"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_page_option2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/webconfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/guide_page_option2_hint"
            android:inputType="number"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btn_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_page_btn_save"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

</LinearLayout>